tests/stable/function/compile_fail/extra_precondition.stderr
error[E0560]: struct `foo` has no field named `_custom_is_20baz`
 --> $DIR/extra_precondition.rs:9:6
  |
9 |     #[assure("is baz", reason = "foo is baz")]
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `foo` does not have this field
  |
  = note: available fields are: `_custom_is_20bar`
